syntax = "proto3";

package messages;

service MessagesSerivce {
    rpc CreateMessage (Create) returns (Messages);
    rpc GetDialogMessages (Get) returns (Messages);
    rpc UpdateMessage (Update) returns (Messages);
    rpc DeleteMessage (Delete) returns (Messages);
}

message Get {
    string dialog_id = 0;
    optional int64 take = 1;
    optional int64 skip = 2;
}

message Create {
    optional MessagesEnumType attachment = 0;
    string dialog_id = 1;
    optional string item_id = 2;
    string message = 3;
    string user_id = 4;
}

message Update {
    optional MessagesEnumType attachment = 0;
    string dialog_id = 1;
    string id = 2;
    string message = 3;
    optional string item_id = 4;
    string user_id = 5;
}

message Delete {
    string id = 0;
}

message Messages {
    string id = 0;
    optional MessagesEnumType attachment = 1;
    optional string item_id = 2;
    string dialog_id = 3;
    string user_id = 4;
    string message = 5;
    int64 createdAt = 6;
}

enum MessagesEnumType {
    user = 0;
    post = 1;
    story = 2;
    messages = 3;
}